MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'D:\Keil\ARM\ARMCLANG\Bin'
Build target 'PowerControl_3OutVer'
compiling gpio.c...
compiling i2c.c...
compiling dma.c...
compiling tim.c...
../Core/Src/main.c(119): error: call to undeclared function 'INA3221_Init'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  119 |   INA3221_Init();
      |   ^
../Core/Src/main.c(146): error: call to undeclared function 'Power_Read_Loop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  146 |     Ina3221_State = Power_Read_Loop();
      |                     ^
2 errors generated.
compiling main.c...
compiling stm32f1xx_hal_msp.c...
compiling can.c...
compiling CallBack.c...
compiling stm32f1xx_it.c...
compiling usart.c...
compiling stm32f1xx_hal_gpio_ex.c...
compiling stm32f1xx_hal_can.c...
compiling stm32f1xx_hal.c...
compiling stm32f1xx_hal_rcc_ex.c...
compiling stm32f1xx_hal_dma.c...
compiling stm32f1xx_hal_rcc.c...
compiling stm32f1xx_hal_cortex.c...
compiling stm32f1xx_hal_flash.c...
compiling stm32f1xx_hal_gpio.c...
compiling stm32f1xx_hal_exti.c...
compiling stm32f1xx_hal_pwr.c...
compiling stm32f1xx_hal_flash_ex.c...
compiling system_stm32f1xx.c...
compiling Buzzer.c...
compiling Power.c...
compiling LED.c...
compiling Message.c...
compiling Button.c...
../Application/INA3221/INA3221.c(34): warning: incompatible pointer types passing 'uint16_t *' (aka 'unsigned short *') to parameter of type 'uint8_t *' (aka 'unsigned char *') [-Wincompatible-pointer-types]
   34 |   HAL_I2C_Mem_Read(&hi2c1, I2C_ADDRESS, 0xFF, 1, &self->read_data_buffer, 2, HAL_MAX_DELAY);
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~
../Drivers/STM32F1xx_HAL_Driver/Inc\stm32f1xx_hal_i2c.h(568): note: passing argument to parameter 'pData' here
  568 | HAL_StatusTypeDef HAL_I2C_Mem_Read(I2C_HandleTypeDef *hi2c, uint16_t DevAddress, uint16_t MemAddress, uint16_t MemAddSize, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                                                                                     ^
1 warning generated.
compiling INA3221.c...
compiling stm32f1xx_hal_tim_ex.c...
compiling stm32f1xx_hal_uart.c...
compiling stm32f1xx_hal_tim.c...
compiling stm32f1xx_hal_i2c.c...
"PowerControl_3OutVer\PowerControl_3OutVer.axf" - 2 Error(s), 1 Warning(s).
Target not created.
Build Time Elapsed:  00:00:04
